# estudart-deptha-ai

./: .gitignore  .watchfiles.toml  CLAUDE.md  README.md  pyproject.toml
.claude/architecture/: pipeline.md  system.md
.claude/decisions/: 0001-openai-gpt4o-vision.md  0002-dicom-zip-input.md  0003-class-based-architecture.md
.claude/features/: mri-analysis.md
.claude/product/: vision.md
.claude/standards/: backend.md
src/: main.py
src/application/agents/: mri_analysis_agent.py  section_analyser.py  synthesis_analyser.py  tools.py
src/application/entities/: analysis_result.py  section_result.py  series_summary.py  synthesis_result.py
src/application/prompts/: prompt_knee.md  prompt_knee_degenerative.md  prompt_knee_native_trauma.md  prompt_knee_postop.md
src/application/prompts/sections/: 02_menisci.md  04_subchondral_bone.md  05_extensor_mechanism.md  06_joint_fluid.md  articular_cartilage.md  extensor_mechanism.md  joint_fluid.md  ligaments.md  menisci.md  patellar_alignment.md  subchondral_bone.md
src/application/services/: analysis_service.py  exam_organiser.py  image_selector.py
src/domain/models/: exam_report.py  report.py
src/infrastructure/: dicom_reader.py  image_encoder.py  llm_client.py  logger.py  openai_client.py
src/presentation/: cli.py  dependencies.py
src/presentation/routes/: magnetic_resonance.py
