[project]
name = "deptha"
version = "0.1.0"
description = "Deptha — AI-assisted MRI analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydicom>=2.4",
    "Pillow>=10.0",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "fpdf2>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
